tools/tests/ui/fail/l1085.cnf
// Test file for error code: L1085
// Expected error: Underflow Mismatch character in type annotation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-underflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
